Adding project location on Jenkinsfile

--- a/kafka-consumer-managment/devops/configs/application.properties
+++ b/kafka-consumer-managment/devops/configs/application.properties
@@ -7,6 +7,7 @@ ARTIFACT_TYPE=jar
 TYPE_COMPILE_LANG=mvn
 BUILD_ADD_OPTIONS= #[optional]
 
+PROJECT_LOCATION="/kafka-consumer-managment"
 PROJECT_NAME="kafka-consumer-managment"
 
 #Nexus
