--- a/kafka-consumer-managment/devops/Jenkinsfile
+++ b/kafka-consumer-managment/devops/Jenkinsfile
@@ -14,6 +14,7 @@ pipeline {
         NEXUS_BASE_URL = credentials('nexus_base_url')
         NEXUS_USER = credentials('nexus_user')
         NEXUS_PASS = credentials('nexus_pass')
+        PROJECT_LOCATION = "/kafka-consumer-managment"
     }
 
     options {
